Fix wrapping

--- a/public/components/workpad_header/workpad_header.less
+++ b/public/components/workpad_header/workpad_header.less
@@ -3,6 +3,10 @@
 .canvas__workpad_header {
   flex-grow: 0;
 
+  div {
+    display: inline-block;
+  }
+
   h2 {
     margin-top: 2px;
   }
